--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "reactjs-popup": "^2.0.6",
     "uploadthing": "^6.12.0"
   },
   "devDependencies": {
