--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
