--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@mui/styles": "^5.15.21",
     "@uploadthing/react": "^6.6.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-material-ui-carousel": "^3.4.2",
     "reactjs-popup": "^2.0.6",
     "uploadthing": "^6.12.0"
   },
