--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^5.15.21",
     "@mui/styles": "^5.15.21",
     "@uploadthing/react": "^6.6.0",
+    "clsx": "^2.1.1",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-material-ui-carousel": "^3.4.2",
     "reactjs-popup": "^2.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0"
   },
   "devDependencies": {
