--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@ server/.env.local
 /ml-backend/temp.py
 /ml-backend/models/knee_model/
 /ml-backend/env/
-/ml-backend/models/xray_class_weights.best.hdf5
-/ml-backend/models/transfer_weights.h5
+/ml-backend/models/
 /project/
